tests/errors/enum.rs
use id_derive::Id;

#[derive(Id)]
enum Test {}

fn main() {}
