tests/errors/enum.stderr
error: Cannot derive Id for enum, expected struct.
 --> $DIR/enum.rs:4:1
  |
4 | enum Test {}
  | ^^^^
